# agn-gazebo

./: CMakeLists.txt  LICENSE  README.md  package.xml
DataspeedInc-velodyne_simulator-57df09e9dc23/velodyne_description/rviz/: example.rviz  static_velodyne.rviz
launch/: animated_box.launch  animated_person.launch  groundtruth.launch  movement.launch  person_animated.launch  pioneer.launch  rescue.launch  start.launch  static_velodyne.launch
models/animated_box/: model.sdf
models/person_standing/: model2.sdf
scripts/: groundtruth.py  make_animated_persons.py
world/: rescue_simple.world
worlds/: final.world  rc_2016_arena_exp1.world  velodyne.world
